              default instead of whatever yields 8K strips.

              --version global option: with SOURCE_DATE_EPOCH environment
              variable, display source code datetime instead of build
              datetime.  And when displaying build datetime, do it in the
              local time of the process running the command instead of the
              process that did the build.

              tifftopnm: Fix memory corruption when image is more pixels than
              can be represented as a C unsigned integer.  Broken in Netpbm
              10.11 (October 2002).

              tifftopnmcmyk: Fix bug: fails with very wide images and no
              -rowsperstrip.  Always broken.  (Tifftocmyk was new in Netpbm
              8.2 (March 2000).

              svgtopam: Fix crash when out of memory.  Always broken (svgtopam
              was new in Netpbm 10.33 (March 2006)).

              pnmcrop: Add -closeness

              libnetpbm: Add ppmd_pathbuilder_* functions.

              libnetpbm: ppmd_fill_path: remove debug trace.  Always broken
              (ppmd_fill_path was new in Netpbm 10.34 (June 2006).

              Build: don't create pointer man pages anymore.  These were
              classic man pages, created by 'make package', one for each
              program, that just told the user to get the manual from the web
              and that other options for manuals are available at install
              time.  Getting documentation online is commonplace enough now
              that the user doesn't need to be told to do it or that there are
              other options.  The existence of pointer man pages was,
              meanwhile, misleading, since it looked from the outside like
              they actually contained documentation.

              Build: Don't package or install Manweb setup (for accessing
              manuals on the web with Manweb).  Probably 100% unused and
              distracting.
